base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-web
spec:
  selector:
    app: gitops-web
  ports:
  - port: 80
    targetPort: 8080
