base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitops-web
spec:
  to:
    kind: Service
    name: gitops-web
  port:
    targetPort: 80
